
Add proper support for FlowIQ2200 water meter.
Decode two vendor values in multical603 as energy forward and returned.
Accept t1 and c1 as linkmodes for multical21 meters.

Version 1.0.0: 2020-10-25

IMPORTANT CHANGES THAT MIGHT AFFECT YOU!

** BREAKING No udev rules

Wmbusmeters new default behaviour is to never exit if no wmbus
device is found. It stays running all the time even if no
wmbus device is detected. As soon as a device is inserted
it will detect/configure and start using the device.

(When reading stdin and files, then wmbusmeters will of course exit
as soon as there is no more data or stdin is closed.)

This means that the udev rules no longer are needed and must be
removed. This will be done automatically by the install script.

** BREAKING The background rtlwmbus/rtl433 command must be wrapped in CMD(...)

If you used your own command xxx to start rtlsdr+rtlwmbus then that command
was previously supplied like this rtlwmbus:xxx
You must now type rtlwmbus:CMD(xxx)

** There is a possibility to identify some dongles with their id.

The im871a/amb8465/rtlsdr dongles have an id. This id is printed when
wmbusmeters starts using the dongle. You can later use the same id to
configure different dongles for different frequencies and link modes.

You could for example have one rtlsdr dongle with an antenna tuned for 434 MHz
and use set the id of that dongle to dongleALFA (rtl_eeprom -s dongleALFA)
likewise for 868.95 MHz. Then you can start your two dongles at the same time:

wmbusmeters rtlwmbus[dongleALFA]:434M rtlmbus[dongleBETA]:868M

The full specification of a wmbus device is this:

tty/file/stdin : type [ id ] : bps : fq : linkmodes : command

Not all values are relevant for all dongles though.

** Use stderr for logging, stdout for data.

wmbusmeters now uses STDERR as default for info/verbose/debug/trace output.
This will not affect you if you run wmbusmeters as a daemon,
but if you start wmbusmeters yourself you should check where stderr is going.