@@ -150,6 +150,7 @@ METER_OBJS:=\
 	$(BUILD)/rtlsdr.o \
 	$(BUILD)/serial.o \
 	$(BUILD)/shell.o \
+	$(BUILD)/sha256.o \
 	$(BUILD)/threads.o \
 	$(BUILD)/util.o \
 	$(BUILD)/units.o \
