@@ -356,6 +356,11 @@ shared_ptr<Configuration> parseCommandLine(int argc, char **argv) {
             i++;
             continue;
         }
+        if (!strncmp(argv[i], "--ignoreduplicates", 18)) {
+            c->ignore_duplicate_telegrams = true;
+            i++;
+            continue;
+        }
         if (!strncmp(argv[i], "--usestdoutforlogging", 13)) {
             c->use_stderr_for_log = false;
             i++;
