@@ -55,6 +55,8 @@ mqtt_publish) sent to a REST API (eg curl) or store it in a database
 
 \fB\--logtelegrams\fR log the contents of the telegrams for easy replay
 
+\fB\--ignoreduplicates\fR ignore duplicate telegrams, remember the last 10 telegrams
+
 \fB\--meterfiles=\fR<dir> store meter readings in dir
 
 \fB\--meterfilesaction=\fR(overwrite|append) overwrite or append to the meter readings file
